feat: initial Readme

--- a/config.json
+++ b/config.json
@@ -5,6 +5,6 @@
   "theme": "chartreuse-dark",
   "owner": "mriusero",
   "repositories": [
-  "RepoMetricsVisualizer"
+  "GitHub-Traffic-Insights"
   ]
 }
